--- a/style/kjemi.css
+++ b/style/kjemi.css
@@ -91,11 +91,27 @@
 iframe {
     width: 100%;
     height: 520px;
+    border: none;
+}
+#fagnummer1 iframe {
+    border-radius: 15px;
 }
 
 @media (max-width: 590px) {
-    .interaktivt-element {
+    #fagnummer2 .interaktivt-element {
         height: 210px !important;
+    }
+}
+
+@media (max-width: 800px) {
+    #fagnummer1 .interaktivt-element {
+        height: 210px !important;
+    }
+}
+
+@media (max-width: 1089px) {
+    #fagnummer1 iframe {
+        height: 750px;
     }
 }
 
