--- a/widgets/tør_du_satse/tør_du_satse.css
+++ b/widgets/tør_du_satse/tør_du_satse.css
@@ -37,6 +37,7 @@ button {
     background-color: var(--elvebakken_blå);
     border: none;
     cursor: pointer;
+    border-radius: 5px;
 }
 button:hover {
     background-color: var(--elvebakken_blå_lys);
