--- a/style/forside.css
+++ b/style/forside.css
@@ -132,7 +132,7 @@
     overflow-x: auto;
     padding: 15px;
     display: grid;
-    /* grid-template-columns: repeat(8, 1fr);  *//* må endres til antall fag */
+    grid-template-columns: repeat(var(--antall_programfag), 1fr);
     gap: 30px;
 
     /* skjuler scrollebaren til fag_menyen for IE, Edge og Firefox */
