--- a/style/kjemi.css
+++ b/style/kjemi.css
@@ -3,10 +3,12 @@
     background-image: url("/assets/imgs/kjemi/periodesystemet.png"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("/assets/imgs/kjemi/person_på_lab.png"); /* bilde kan byttes ut */
+    background-image: url("/assets/imgs/kjemi/kjemi_nærbilde2.jpg"); /* bilde kan byttes ut */
+    background-position: bottom;
 }
 #fagnummer2 .visuelt-element {
-    background-image: url("/assets/imgs/kjemi/kjemiting.png"); /* bilde kan byttes ut */
+    background-image: url("/assets/imgs/kjemi/kjem_vertikalt.jpg"); /* bilde kan byttes ut */
+    background-position: center;
 }
 /*Liste over sentrale temaer*/
 .sentrale-temaer > ul > li {
