--- a/style/engelsk.css
+++ b/style/engelsk.css
@@ -8,3 +8,12 @@
 #fagnummer2 .visuelt-element {
     background-image: url("/assets/imgs/"); /* bilde kan byttes ut */
 }
+
+@media(max-width: 770px){
+    #forside-bilde {
+        font-size: 5.5vw;
+    }
+    h2 {
+        font-size: 2.2rem !important;
+    }
+}
