--- a/programfag/samfunnsøkonomi/samfunnsøkonomi.css
+++ b/programfag/samfunnsøkonomi/samfunnsøkonomi.css
@@ -1,12 +1,12 @@
 /* bakgrunnsbilde øverst på side */
 #forside-bilde {
-    background-image: url("/Fagvalgsider_Elvebakken_VGS/assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp"); /* her kan bildet endres */
+    background-image: url("../../assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("/Fagvalgsider_Elvebakken_VGS/assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp"); /* bilde kan byttes ut */
+    background-image: url("../../assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp"); /* bilde kan byttes ut */
 }
 #fagnummer2 .visuelt-element {
-    background-image: url("/Fagvalgsider_Elvebakken_VGS/assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp"); /* bilde kan byttes ut */
+    background-image: url("../../assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp"); /* bilde kan byttes ut */
 }
 
 /*endrer grid-template-rows her siden programfag.css baserer seg på realfagene som også har info om realfagspoeng*/
