--- a/programfag/r_matte/matte_r.css
+++ b/programfag/r_matte/matte_r.css
@@ -1,12 +1,12 @@
 /* bakgrunnsbilde øverst på side */
 #forside-bilde {
-    background-image: url("/Fagvalgsider_Elvebakken_VGS/assets/imgs/matte_r/matte_r_placeholder.png"); /* her kan bildet endres */
+    background-image: url("../../imgs/matte_r/matte_r_placeholder.png"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("/Fagvalgsider_Elvebakken_VGS/assets/imgs/matte_r/matte_r_placeholder.png"); /* bilde kan byttes ut */
+    background-image: url("../../imgs/matte_r/matte_r_placeholder.png"); /* bilde kan byttes ut */
 }
 #fagnummer2 .visuelt-element {
-    background-image: url("/Fagvalgsider_Elvebakken_VGS/assets/imgs/matte_r/matte_r_placeholder.png"); /* bilde kan byttes ut */
+    background-image: url("../../imgs/matte_r/matte_r_placeholder.png"); /* bilde kan byttes ut */
 }
 /*Liste over sentrale temaer*/
 .sentrale-temaer > ul > li {
