--- a/programfag/engelsk/engelsk.css
+++ b/programfag/engelsk/engelsk.css
@@ -1,12 +1,12 @@
 /* bakgrunnsbilde øverst på side */
 #forside-bilde {
-    background-image: url("/Fagvalgsider_Elvebakken_VGS/assets/imgs/engelsk/shakespear.png"); /* her kan bildet endres */
+    background-image: url("../../assets/imgs/engelsk/shakespear.png"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("/Fagvalgsider_Elvebakken_VGS/assets/imgs/engelsk/britainflag.png"); /* bilde kan byttes ut */
+    background-image: url("../../assets/imgs/engelsk/britainflag.png"); /* bilde kan byttes ut */
 }
 #fagnummer2 .visuelt-element {
-    background-image: url("/Fagvalgsider_Elvebakken_VGS/assets/imgs/"); /* bilde kan byttes ut */
+    background-image: url("../../assets/imgs/"); /* bilde kan byttes ut */
 }
 
 @media(max-width: 770px){
