--- a/programfag/kinesisk2/kinesisk2.css
+++ b/programfag/kinesisk2/kinesisk2.css
@@ -1,9 +1,9 @@
 /* bakgrunnsbilde øverst på side */
 #forside-bilde {
-    background-image: url("/Fagvalgsider_Elvebakken_VGS/assets/imgs/kinesisk2/wall_china.png"); /* her kan bildet endres */
+    background-image: url("../../assets/imgs/kinesisk2/wall_china.png"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("/Fagvalgsider_Elvebakken_VGS/assets/imgs/kinesisk2/flag.png"); /* bilde kan byttes ut */
+    background-image: url("../../assets/imgs/kinesisk2/flag.png"); /* bilde kan byttes ut */
 }
 
 @media(max-width: 770px){
