--- a/programfag/fysikk/fysikk.css
+++ b/programfag/fysikk/fysikk.css
@@ -1,10 +1,10 @@
 /* bakgrunnsbilde øverst på side */
 #forside-bilde {
-    background-image: url("/Fagvalgsider_Elvebakken_VGS/assets/imgs/fysikk/placeholder_fysikk.png"); /* her kan bildet endres */
+    background-image: url("../../assets/imgs/fysikk/placeholder_fysikk.png"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("/Fagvalgsider_Elvebakken_VGS/assets/imgs/fysikk/placeholder_fysikk.png"); /* bilde kan byttes ut */
+    background-image: url("../../assets/imgs/fysikk/placeholder_fysikk.png"); /* bilde kan byttes ut */
 }
 #fagnummer2 .visuelt-element {
-    background-image: url("/Fagvalgsider_Elvebakken_VGS/assets/imgs/fysikk/placeholder_fysikk.png"); /* bilde kan byttes ut */
+    background-image: url("../../assets/imgs/fysikk/placeholder_fysikk.png"); /* bilde kan byttes ut */
 }
