--- a/programfag/tekforsk/tekforsk.css
+++ b/programfag/tekforsk/tekforsk.css
@@ -1,12 +1,12 @@
 /* bakgrunnsbilde øverst på side */
 #forside-bilde {
-    background-image: url("/Fagvalgsider_Elvebakken_VGS/assets/imgs/teknologi_og_forskningslære/placeholder_tekforsk.png"); /* her kan bildet endres */
+    background-image: url("../../assets/imgs/teknologi_og_forskningslære/placeholder_tekforsk.png"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("/Fagvalgsider_Elvebakken_VGS/assets/imgs/teknologi_og_forskningslære/placeholder_tekforsk.png"); /* bilde kan byttes ut */
+    background-image: url("../../assets/imgs/teknologi_og_forskningslære/placeholder_tekforsk.png"); /* bilde kan byttes ut */
 }
 #fagnummer2 .visuelt-element {
-    background-image: url("/Fagvalgsider_Elvebakken_VGS/assets/imgs/teknologi_og_forskningslære/placeholder_tekforsk.png"); /* bilde kan byttes ut */
+    background-image: url("../../assets/imgs/teknologi_og_forskningslære/placeholder_tekforsk.png"); /* bilde kan byttes ut */
 }
 @media(max-width: 770px){
     #forside-bilde {
