--- a/programfag/sosialkunnskap/sosialkunnskap.css
+++ b/programfag/sosialkunnskap/sosialkunnskap.css
@@ -1,14 +1,10 @@
 /* bakgrunnsbilde øverst på side */
 #forside-bilde {
-    background-image: url("../../assets/imgs/hifi/sokrates.png"); /* her kan bildet endres */
+    background-image: url("../../assets/imgs/sosialkunnskap/statue_leser.png"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("../../assets/imgs/"); /* bilde kan byttes ut */
+    background-image: url("../../assets/imgs/sosialkunnskap/statue_leser.png"); /* bilde kan byttes ut */
 }
-#fagnummer2 .visuelt-element {
-    background-image: url("../../assets/imgs/"); /* bilde kan byttes ut */
-}
-
 @media(max-width: 770px){
     #forside-bilde {
         font-size: 5.5vw;
