--- a/style/forside.css
+++ b/style/forside.css
@@ -89,6 +89,9 @@
 #intro-område{
     padding: 50px 5% 0 5%;
 }
+#intro-område-forside{
+    padding: 50px 5%;
+}
 
 #intro {
     font-size: 1.5rem;
