--- a/programfag/fysikk/fysikk.css
+++ b/programfag/fysikk/fysikk.css
@@ -3,8 +3,14 @@
     background-image: url("../../assets/imgs/fysikk/placeholder_fysikk.png"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("../../assets/imgs/fysikk/placeholder_fysikk.png"); /* bilde kan byttes ut */
+    background-image: url("../../assets/imgs/fysikk/galakse.png"); /* bilde kan byttes ut */
 }
 #fagnummer2 .visuelt-element {
-    background-image: url("../../assets/imgs/fysikk/placeholder_fysikk.png"); /* bilde kan byttes ut */
+    background-image: url("../../assets/imgs/fysikk/oransje_galakse.png"); /* bilde kan byttes ut */
+}
+.hvordan-jobber-vi, .interaktivt-element, #andre-fag {
+    background-color: #9F98C3 !important; /* overstyrer originalfarge */
+}
+#andre-fag:hover {
+    background-color: #B7B2D2 !important;
 }
