--- a/programfag/hifi/hifi.css
+++ b/programfag/hifi/hifi.css
@@ -3,10 +3,7 @@
     background-image: url("../../assets/imgs/hifi/sokrates.png"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("../../assets/imgs/"); /* bilde kan byttes ut */
-}
-#fagnummer2 .visuelt-element {
-    background-image: url("../../assets/imgs/"); /* bilde kan byttes ut */
+    background-image: url("../../assets/imgs/hifi/solnedgang.png"); /* bilde kan byttes ut */
 }
 
 @media(max-width: 770px){
