--- a/programfag/s_matte/matte_s.css
+++ b/programfag/s_matte/matte_s.css
@@ -3,7 +3,7 @@
     background-image: url("../../assets/imgs/matte_s/matte_s_placeholder.png"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("../../assets/imgs/matte_s/matte_s_placeholder.png"); /* bilde kan byttes ut */
+    background-image: url("../../assets/imgs/matte_s/matte_på_tavle.png"); /* bilde kan byttes ut */
 }
 #fagnummer2 .visuelt-element {
     background-image: url("../../assets/imgs/matte_s/matte_s_placeholder.png"); /* bilde kan byttes ut */
