Flyttet bilder, fikset mk-overskrift, startet på sosiologi og sosialantropologi

--- a/mk/mk_oversikt.css
+++ b/mk/mk_oversikt.css
@@ -2,3 +2,8 @@
     --antall_programfag: 8;
     --side_man_kommer_ifra: "mk";
 }
+@media (max-width: 770px){
+    #forside > h1{
+        font-size: 10vw;
+    };
+};
