--- a/programfag/psykologi/psykologi.css
+++ b/programfag/psykologi/psykologi.css
@@ -3,13 +3,21 @@
     background-image: url("../../assets/imgs/psykologi/placeholder_psykologi.jpg"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("../../assets/imgs/psykologi/placeholder_psykologi.jpg"); /* bilde kan byttes ut */
+    background-image: url("../../assets/imgs/psykologi/nærbilde-ansikt-øye.png"); /* bilde kan byttes ut */
 }
 #fagnummer2 .visuelt-element {
-    background-image: url("../../assets/imgs/psykologi/placeholder_psykologi.jpg"); /* bilde kan byttes ut */
+    background-image: url("../../assets/imgs/psykologi/flere-farger-mennesker-lgbtqia+.png"); /* bilde kan byttes ut */
 }
 
 /*endrer grid-template-rows her siden programfag.css baserer seg på realfagene som også har info om realfagspoeng*/
 .rask-oversikt {
     grid-template-rows: auto 1fr 1fr; /* fordeler elementene i listen utover boksen */
+}
+@media(max-width: 770px){
+    #forside-bilde {
+        font-size: 5.5vw;
+    }
+    h2 {
+        font-size: 2.2rem !important;
+    }
 }
