--- a/programfag/rettslære/rettslære.css
+++ b/programfag/rettslære/rettslære.css
@@ -9,10 +9,7 @@
     background-image: url("../../assets/imgs/rettslære/placeholder_rettslære.jpg"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("../../assets/imgs/rettslære/placeholder_rettslære.jpg"); /* bilde kan byttes ut */
-}
-#fagnummer2 .visuelt-element {
-    background-image: url("../../assets/imgs/rettslære/placeholder_rettslære.jpg"); /* bilde kan byttes ut */
+    background-image: url("../../assets/imgs/rettslære/justice-scrabble.png"); /* bilde kan byttes ut */
 }
 
 /*endrer grid-template-rows her siden programfag.css baserer seg på realfagene som også har info om realfagspoeng*/
