--- a/programfag/samfunnsgeografi/samfunnsgeografi.css
+++ b/programfag/samfunnsgeografi/samfunnsgeografi.css
@@ -9,10 +9,7 @@
     background-image: url("../../assets/imgs/samfunnsgeografi/placeholder_samfunnsgeografi.jpg"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("../../assets/imgs/samfunnsgeografi/placeholder_samfunnsgeografi.jpg"); /* bilde kan byttes ut */
-}
-#fagnummer2 .visuelt-element {
-    background-image: url("../../assets/imgs/samfunnsgeografi/placeholder_samfunnsgeografi.jpg"); /* bilde kan byttes ut */
+    background-image: url("../../assets/imgs/samfunnsgeografi/by-fra-lufta.png"); /* bilde kan byttes ut */
 }
 
 .rask-oversikt, .divider-element {
