--- a/programfag/samfunnsøkonomi/samfunnsøkonomi.css
+++ b/programfag/samfunnsøkonomi/samfunnsøkonomi.css
@@ -1,11 +1,8 @@
 /* bakgrunnsbilde øverst på side */
 #forside-bilde {
-    background-image: url("../../assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp"); /* her kan bildet endres */
+    background-image: url("../../assets/imgs/samfunnsøkonomi/graf-aksjer.png"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("../../assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp"); /* bilde kan byttes ut */
-}
-#fagnummer2 .visuelt-element {
     background-image: url("../../assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp"); /* bilde kan byttes ut */
 }
 
