--- a/programfag/friluftsliv/friluftsliv.css
+++ b/programfag/friluftsliv/friluftsliv.css
@@ -13,3 +13,11 @@
 .visuelt-element {
     background-image: url("../../assets/imgs/friluftsliv/kajakk.png"); /* bilde kan byttes ut */
 }
+@media(max-width: 770px){
+    #forside-bilde {
+        font-size: 5.5vw;
+    }
+    h2 {
+        font-size: 2.2rem !important;
+    }
+}
