Fikset bilder samfunnsøkonomi

--- a/programfag/samfunnsøkonomi/samfunnsøkonomi.css
+++ b/programfag/samfunnsøkonomi/samfunnsøkonomi.css
@@ -5,6 +5,9 @@
 .visuelt-element {
     background-image: url("../../assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp"); /* bilde kan byttes ut */
 }
+#fagnummer2 .visuelt-element {
+    background-image: url("../../assets/imgs/samfunnsøkonomi/småpenger-og-kalkulator.png"); /* bilde kan byttes ut */
+}
 
 /*endrer grid-template-rows her siden programfag.css baserer seg på realfagene som også har info om realfagspoeng*/
 .rask-oversikt {
