--- a/idrettsfag/programfag/friluftsliv/friluftsliv.css
+++ b/idrettsfag/programfag/friluftsliv/friluftsliv.css
@@ -8,11 +8,16 @@
 }
 /* bakgrunnsbilde øverst på side */
 #forside-bilde {
-    background-image: url("../../assets/imgs/friluftsliv/folk_paa_tur.png"); /* her kan bildet endres */
+    background-image: url("../../../assets/imgs/friluftsliv/folk_paa_tur.png"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("../../assets/imgs/friluftsliv/kajakk.png"); /* bilde kan byttes ut */
+    background-image: url("../../../assets/imgs/friluftsliv/kajakk.png"); /* bilde kan byttes ut */
 }
-.sentrale-temaer p{
-    font-size: 1.2rem;
+@media(max-width: 770px){
+    #forside-bilde {
+        font-size: 5.5vw;
+    }
+    h2 {
+        font-size: 2.2rem !important;
+    }
 }
