--- a/kda/programfag/arkitektur_og_samfunn/arkitektur_og_samfunn.css
+++ b/kda/programfag/arkitektur_og_samfunn/arkitektur_og_samfunn.css
@@ -1,9 +1,9 @@
 /* bakgrunnsbilde øverst på side */
 #forside-bilde {
-    background-image: url("../../assets/imgs/arkitektur_og_samfunn/laserkuttet_hus.jpg"); /* her kan bildet endres */
+    background-image: url("../../../assets/imgs/arkitektur_og_samfunn/laserkuttet_hus.jpg"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("../../assets/imgs/arkitektur_og_samfunn/plan-liten-by.jpg"); /* bilde kan byttes ut */
+    background-image: url("../../../assets/imgs/arkitektur_og_samfunn/plan-liten-by.jpg"); /* bilde kan byttes ut */
 }
 @media(max-width: 770px){
     #forside-bilde {
