--- a/kda/programfag/design_og_bærekraft/design_og_bærekraft.css
+++ b/kda/programfag/design_og_bærekraft/design_og_bærekraft.css
@@ -1,9 +1,9 @@
 /* bakgrunnsbilde øverst på side */
 #forside-bilde {
-    background-image: url("../../assets/imgs/design_og_bærekraft/redesign_bukser_og_vesker.jpg"); /* her kan bildet endres */
+    background-image: url("../../../assets/imgs/design_og_bærekraft/redesign_bukser_og_vesker.jpg"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("../../assets/imgs/design_og_bærekraft/design-ideer.jpg"); /* bilde kan byttes ut */
+    background-image: url("../../../assets/imgs/design_og_bærekraft/design-ideer.jpg"); /* bilde kan byttes ut */
 }
 @media(max-width: 770px){
     #forside-bilde {
