--- a/ssø/programfag/rettslære/rettslære.css
+++ b/ssø/programfag/rettslære/rettslære.css
@@ -6,13 +6,13 @@
 
 /* bakgrunnsbilde øverst på side */
 #forside-bilde {
-    background-image: url("../../assets/imgs/rettslære/placeholder_rettslære.jpg"); /* her kan bildet endres */
+    background-image: url("../../../assets/imgs/rettslære/placeholder_rettslære.jpg"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("../../assets/imgs/rettslære/justice-scrabble.png"); /* bilde kan byttes ut */
+    background-image: url("../../../assets/imgs/rettslære/justice-scrabble.png"); /* bilde kan byttes ut */
 }
 #fagnummer2 .visuelt-element {
-    background-image: url("../../assets/imgs/rettslære/tegning-lovbøker.png"); /* bilde kan byttes ut */
+    background-image: url("../../../assets/imgs/rettslære/tegning-lovbøker.png"); /* bilde kan byttes ut */
 }
 
 /*endrer grid-template-rows her siden programfag.css baserer seg på realfagene som også har info om realfagspoeng*/
