--- a/realfag/programfag/fysikk/fysikk.css
+++ b/realfag/programfag/fysikk/fysikk.css
@@ -1,12 +1,12 @@
 /* bakgrunnsbilde øverst på side */
 #forside-bilde {
-    background-image: url("../../assets/imgs/fysikk/placeholder_fysikk.png"); /* her kan bildet endres */
+    background-image: url("../../../assets/imgs/fysikk/placeholder_fysikk.png"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("../../assets/imgs/fysikk/galakse.png"); /* bilde kan byttes ut */
+    background-image: url("../../../assets/imgs/fysikk/galakse.png"); /* bilde kan byttes ut */
 }
 #fagnummer2 .visuelt-element {
-    background-image: url("../../assets/imgs/fysikk/oransje_galakse.png"); /* bilde kan byttes ut */
+    background-image: url("../../../assets/imgs/fysikk/oransje_galakse.png"); /* bilde kan byttes ut */
 }
 .hvordan-jobber-vi, .interaktivt-element, #andre-fag {
     background-color: #9F98C3 !important; /* overstyrer originalfarge */
