--- a/realfag/programfag/kjemi/kjemi.css
+++ b/realfag/programfag/kjemi/kjemi.css
@@ -1,13 +1,13 @@
 /* bakgrunnsbilde øverst på side */
 #forside-bilde {
-    background-image: url("../../assets/imgs/kjemi/periodesystemet.png"); /* her kan bildet endres */
+    background-image: url("../../../assets/imgs/kjemi/periodesystemet.png"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("../../assets/imgs/kjemi/kjemi_nærbilde2.jpg"); /* bilde kan byttes ut */
+    background-image: url("../../../assets/imgs/kjemi/kjemi_nærbilde2.jpg"); /* bilde kan byttes ut */
     background-position: bottom;
 }
 #fagnummer2 .visuelt-element {
-    background-image: url("../../assets/imgs/kjemi/kjem_vertikalt.jpg"); /* bilde kan byttes ut */
+    background-image: url("../../../assets/imgs/kjemi/kjem_vertikalt.jpg"); /* bilde kan byttes ut */
     background-position: center;
 }
 /*Liste over sentrale temaer*/
