--- a/realfag/programfag/s_matte/matte_s.css
+++ b/realfag/programfag/s_matte/matte_s.css
@@ -1,12 +1,12 @@
 /* bakgrunnsbilde øverst på side */
 #forside-bilde {
-    background-image: url("../../assets/imgs/matte_s/matte_s_placeholder.png"); /* her kan bildet endres */
+    background-image: url("../../../assets/imgs/matte_s/matte_s_placeholder.png"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("../../assets/imgs/matte_s/matte_på_tavle.png"); /* bilde kan byttes ut */
+    background-image: url("../../../assets/imgs/matte_s/matte_på_tavle.png"); /* bilde kan byttes ut */
 }
 #fagnummer2 .visuelt-element {
-    background-image: url("../../assets/imgs/matte_s/integrasjon.png"); /* bilde kan byttes ut */
+    background-image: url("../../../assets/imgs/matte_s/integrasjon.png"); /* bilde kan byttes ut */
 }
 
 @media(max-width: 670px){
