--- a/realfag/programfag/tekforsk/tekforsk.css
+++ b/realfag/programfag/tekforsk/tekforsk.css
@@ -1,12 +1,12 @@
 /* bakgrunnsbilde øverst på side */
 #forside-bilde {
-    background-image: url("../../assets/imgs/teknologi_og_forskningslære/greier.png"); /* her kan bildet endres */
+    background-image: url("../../../assets/imgs/teknologi_og_forskningslære/greier.png"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("../../assets/imgs/teknologi_og_forskningslære/printing.png"); /* bilde kan byttes ut */
+    background-image: url("../../../assets/imgs/teknologi_og_forskningslære/printing.png"); /* bilde kan byttes ut */
 }
 #fagnummer2 .visuelt-element {
-    background-image: url("../../assets/imgs/teknologi_og_forskningslære/mer_printing.png"); /* bilde kan byttes ut */
+    background-image: url("../../../assets/imgs/teknologi_og_forskningslære/mer_printing.png"); /* bilde kan byttes ut */
 }
 @media(max-width: 770px){
     #forside-bilde {
