--- a/ssø/programfag/engelsk/engelsk.css
+++ b/ssø/programfag/engelsk/engelsk.css
@@ -1,12 +1,12 @@
 /* bakgrunnsbilde øverst på side */
 #forside-bilde {
-    background-image: url("../../assets/imgs/engelsk/shakespear.png"); /* her kan bildet endres */
+    background-image: url("../../../assets/imgs/engelsk/shakespear.png"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("../../assets/imgs/engelsk/kingsguide.png"); /* bilde kan byttes ut */
+    background-image: url("../../../assets/imgs/engelsk/kingsguide.png"); /* bilde kan byttes ut */
 }
 #fagnummer2 .visuelt-element {
-    background-image: url("../../assets/imgs/engelsk/america.png"); /* bilde kan byttes ut */
+    background-image: url("../../../assets/imgs/engelsk/america.png"); /* bilde kan byttes ut */
 }
 
 .elev-sitat > ul{
