--- a/ssø/programfag/hifi/hifi.css
+++ b/ssø/programfag/hifi/hifi.css
@@ -1,9 +1,9 @@
 /* bakgrunnsbilde øverst på side */
 #forside-bilde {
-    background-image: url("../../assets/imgs/hifi/sokrates.png"); /* her kan bildet endres */
+    background-image: url("../../../assets/imgs/hifi/sokrates.png"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("../../assets/imgs/hifi/solnedgang.png"); /* bilde kan byttes ut */
+    background-image: url("../../../assets/imgs/hifi/solnedgang.png"); /* bilde kan byttes ut */
 }
 
 /*endrer grid-template-rows her siden programfag.css baserer seg på realfagene som også har info om realfagspoeng*/
