--- a/ssø/programfag/pom/pom.css
+++ b/ssø/programfag/pom/pom.css
@@ -1,9 +1,9 @@
 /* bakgrunnsbilde øverst på side */
 #forside-bilde {
-    background-image: url("../../assets/imgs/pom/person_foran_gjerde.png"); /* her kan bildet endres */
+    background-image: url("../../../assets/imgs/pom/person_foran_gjerde.png"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("../../assets/imgs/pom/freedom_tagget.png"); /* bilde kan byttes ut */
+    background-image: url("../../../assets/imgs/pom/freedom_tagget.png"); /* bilde kan byttes ut */
 }
 @media(max-width: 770px){
     #forside-bilde {
