--- a/ssø/programfag/psykologi/psykologi.css
+++ b/ssø/programfag/psykologi/psykologi.css
@@ -1,12 +1,12 @@
 /* bakgrunnsbilde øverst på side */
 #forside-bilde {
-    background-image: url("../../assets/imgs/psykologi/placeholder_psykologi.jpg"); /* her kan bildet endres */
+    background-image: url("../../../assets/imgs/psykologi/placeholder_psykologi.jpg"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("../../assets/imgs/psykologi/nærbilde-ansikt-øye.png"); /* bilde kan byttes ut */
+    background-image: url("../../../assets/imgs/psykologi/nærbilde-ansikt-øye.png"); /* bilde kan byttes ut */
 }
 #fagnummer2 .visuelt-element {
-    background-image: url("../../assets/imgs/psykologi/flere-farger-mennesker-lgbtqia+.png"); /* bilde kan byttes ut */
+    background-image: url("../../../assets/imgs/psykologi/flere-farger-mennesker-lgbtqia+.png"); /* bilde kan byttes ut */
 }
 
 /*endrer grid-template-rows her siden programfag.css baserer seg på realfagene som også har info om realfagspoeng*/
