--- a/ssø/programfag/sosiologi_og_sosialantropologi/sos.css
+++ b/ssø/programfag/sosiologi_og_sosialantropologi/sos.css
@@ -1,9 +1,9 @@
 /* bakgrunnsbilde øverst på side */
 #forside-bilde {
-    background-image: url("../../assets/imgs/sosiologi_og_sosialantropologi/statue_leser.png"); /* her kan bildet endres */
+    background-image: url("../../../assets/imgs/sosiologi_og_sosialantropologi/statue_leser.png"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("../../assets/imgs/sosiologi_og_sosialantropologi/statue_leser.png"); /* bilde kan byttes ut */
+    background-image: url("../../../assets/imgs/sosiologi_og_sosialantropologi/statue_leser.png"); /* bilde kan byttes ut */
 }
 
 .elev-sitat > ul{
