--- a/ssø/programfag/språk3/språk3.css
+++ b/ssø/programfag/språk3/språk3.css
@@ -1,9 +1,9 @@
 /* bakgrunnsbilde øverst på side */
 #forside-bilde {
-    background-image: url("../../assets/imgs/språk3/spansk-flagg-vind.png"); /* her kan bildet endres */
+    background-image: url("../../../assets/imgs/språk3/spansk-flagg-vind.png"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("../../assets/imgs/språk3/madrid-spania.png"); /* bilde kan byttes ut */
+    background-image: url("../../../assets/imgs/språk3/madrid-spania.png"); /* bilde kan byttes ut */
 }
 @media(max-width: 770px){
     #forside-bilde {
