--- a/idrettsfag/programfag/esport/esport.css
+++ b/idrettsfag/programfag/esport/esport.css
@@ -8,10 +8,10 @@
 }
 /* bakgrunnsbilde øverst på side */
 #forside-bilde {
-    background-image: url("../../../assets/imgs/friluftsliv/folk_paa_tur.png"); /* her kan bildet endres */
+    background-image: url("../../../assets/imgs/e-sport/gaming_mørk.png"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("../../../assets/imgs/friluftsliv/kajakk.png"); /* bilde kan byttes ut */
+    background-image: url("../../../assets/imgs/e-sport/tastatur.png"); /* bilde kan byttes ut */
 }
 .sentrale-temaer p{
     font-size: 1.2rem;
