--- a/mk/programfag/bilde/bilde.css
+++ b/mk/programfag/bilde/bilde.css
@@ -13,3 +13,9 @@
         font-size: 2.2rem !important;
     }
 }
+.dette-gjør-vi {
+    background-color: var(--elvebakken_gul) !important;
+}
+.mer-informasjon li{
+    padding-block: 5px;
+}
