--- a/mk/programfag/grafisk_design/grafisk_design.css
+++ b/mk/programfag/grafisk_design/grafisk_design.css
@@ -1,9 +1,9 @@
 /* bakgrunnsbilde øverst på side */
 #forside-bilde {
-    background-image: url("../../../assets/imgs/bilde/banner.png") /* her kan bildet endres */
+    background-image: url("../../../assets/imgs/grafisk_design/ilustration.png") /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("../../../assets/imgs/kunst_og_skapende/shiny-bakgrunn.jpg"); /* bilde kan byttes ut */
+    background-image: url("../../../assets/imgs/grafisk_design/pcetc.png"); /* bilde kan byttes ut */
 }
 @media(max-width: 770px){
     #forside-bilde {
