--- a/mk/programfag/lyddesign/lyddesign.css
+++ b/mk/programfag/lyddesign/lyddesign.css
@@ -1,9 +1,9 @@
 /* bakgrunnsbilde øverst på side */
 #forside-bilde {
-    background-image: url("../../../assets/imgs/medieutvikling/teknologi.png"); /* her kan bildet endres */
+    background-image: url("../../../assets/imgs/lyddesign/lydbølge_blaa.png"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("../../../assets/imgs/medieutvikling/ideer.png"); /* bilde kan byttes ut */
+    background-image: url("../../../assets/imgs/lyddesign/lydbølge.png"); /* bilde kan byttes ut */
 }
 @media(max-width: 770px){
     #forside-bilde {
