Ferdig alle sider justeres til skjermbredde. også kanskje en kjemi-løsning
løsningen i kjemi er å legge på en width:auto i håp om at bildet faktisk får en bredde

--- a/realfag/programfag/tekforsk/tekforsk.css
+++ b/realfag/programfag/tekforsk/tekforsk.css
@@ -13,3 +13,8 @@
         font-size: 5.5vw;
     }
 }
+@media(max-width:380px){ /* Justerer skriftstørrelsen til underoverskriftene til skjermbredden */
+    .fag-informasjon > h2{
+        font-size: 10vw;
+    }
+}
