--- a/ssø/programfag/pom/pom.css
+++ b/ssø/programfag/pom/pom.css
@@ -15,3 +15,16 @@
         font-size: 9vw !important;
     }
 }
+/*Liste over sentrale temaer*/
+.sentrale-temaer > ul > li {
+    list-style-type: none;
+    font-weight: bold;
+}
+.sentrale-temaer > ul {
+    -webkit-padding-start: 0;
+    padding-block: 1vw;
+    padding: 0;
+}
+.sentrale-temaer li {
+    padding: 1vw;
+}
